# open-agents

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt
demo/: configs.py  demo.py
llmbuddy/: alembic.ini  configs.py  constants.py  deps.py  helpers.py  main.py
llmbuddy/controllers/: models_controller.py
llmbuddy/controllers/chat/: chat_controller.py
llmbuddy/controllers/documents/: documents_controller.py
llmbuddy/controllers/llm/: llm_controller.py
llmbuddy/controllers/models/: models_controller.py
llmbuddy/databases/: models.py  types.py
llmbuddy/migrations/versions/: 5168180b43d0_init_database.py
llmbuddy/models/: chat_model.py  llm_model.py
llmbuddy/services/agent/: web_agent.py
llmbuddy/services/documents/: documents_service.py
llmbuddy/services/llm/: gemini_service.py  phi4_service.py  qwen_service.py
llmbuddy/services/models/: model_service.py
llmbuddy/services/streaming/: streaming_service.py
migrations/: env.py
migrations/versions/: a89b3e35c201_init_database.py
open-agents/: deps.py  main.py
open-agents/databases/: models.py
open-agents/services/agent/: base_service.py  supervisor_agent.py  weather_agent.py  web_agent.py
open-agents/services/llm/: base_service.py
open-agents/tools/: weather_tools.py
